--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@
     <div class="header__container container">
       <!-- Navigation -->
       <nav class="header__nav nav-header">
-        <a href="/" class="logo header__logo"><span class="logo__accent">Web</span>Studio</a>
+        <a href="./index.html" class="logo header__logo"><span class="logo__accent">Web</span>Studio</a>
         <!-- Menu button -->
         <button class="header__menu-btn menu-btn" type="button" aria-label="Переключатель мобильного меню" data-menu-button>
           <svg width="40" height="40" aria-label="Переключатель мобильного меню">
